# carnetdevacunacion

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  app.json  cmdv  docker-compose.yml  environment.json  manage.py  package-lock.json  package.json  pyproject.toml
carnetdevacunacion/: apps.py
config/: core_settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
src/: App.vue  main.js  vee-validate.js
src/assets/: style.scss
src/components/: HelloWorld.vue
src/components/svg/: Logo.vue
src/config/: index.js
src/languages/: es.js  index.js
src/plugins/: airtable.js
src/plugins/queries/: get_vaccines.js
src/router/: index.js
src/views/: About.vue  Home.vue
templates/: base.html
